# sglang_opt

./: .gitignore  README.md  gpt5.2_implementation_discussion.md  opus_plan+build.md
sglang_sim/: README.md  pyproject.toml  test_vis.py
sglang_sim/examples/: basic_simulation.py  multi_objective_optimization.py  optimize_pd_ratio.py  sweep_chunk_size.py
sglang_sim/sim/: __init__.py
sglang_sim/sim/cache/: __init__.py  radix_cache.py
sglang_sim/sim/config/: __init__.py  cache.py  cluster.py  model.py  scheduler.py
sglang_sim/sim/core/: __init__.py  engine.py  events.py  request.py  state.py
sglang_sim/sim/kernels/: __init__.py  attention.py  mlp.py  moe.py
sglang_sim/sim/metrics/: __init__.py  constraints.py  definitions.py  expressions.py  memory.py  symbolic.py
sglang_sim/sim/models/: __init__.py  operator_graph.py
sglang_sim/sim/network/: __init__.py  interconnect.py  kv_transfer.py
sglang_sim/sim/optimizer/: __init__.py  interface.py
sglang_sim/sim/parallel/: __init__.py  collectives.py  groups.py
sglang_sim/sim/routing/: __init__.py  router.py
sglang_sim/sim/schedulers/: __init__.py  batch_scheduler.py
sglang_sim/sim/symbolic/: __init__.py  expr.py  symbols.py
sglang_sim/sim/visualization/: __init__.py  graph.py
sglang_sim/sim/workers/: __init__.py  decode_worker.py  prefill_worker.py
sglang_sim/sim/workload/: __init__.py  generators.py  prefix_groups.py  trace_loader.py
sglang_sim/tests/: __init__.py  test_metrics.py  test_symbolic.py  test_visualization.py
