[project]
name = "sglang-sim"
version = "0.1.0"
description = "LLM inference simulator with symbolic tracing for SGLang-style workloads"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
viz = [
    "graphviz>=0.20",
    "matplotlib>=3.7",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "graphviz>=0.20",
    "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

